--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "responsive portfolio for me ",
   "main": "index.js",
-  "homepage": "https://aminkammoun.github.io/porfolio",
+  "homepage": "https://aminkammoun.github.io/myportfolio",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css --recursive",
     "deploy": "gh-pages -d dist"
